Use vite, fix TS errors

--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./public/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SimCity TS</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="root-window">
         <div id="render-target"></div>
     </div>
-
-    <script type="module">
-        import {createScene} from './src/scene.ts'
-
-        window.onload = ( )=>{
-            window.scene = createScene();
-            window.scene = start();
-        }
-    </script>
-</body>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
